Expanded documentation to cover basic usage